자기소개 수정

--- a/WebProTask/index.html
+++ b/WebProTask/index.html
@@ -81,8 +81,12 @@
                     <!-- 본인 성장 과정 -->
                     저는 사촌형의 영향으로 8살 때부터 게임을 시작하여 현재까지 꾸준히 게임을 즐기고 있습니다. 게임에 대한 열정이 많았고,
                     자신있는 재능을 발휘하여 상위 0.1%까지 올라가는 경험도 있었습니다. 그러나 상위 티어로 올라갈수록 게임 내 밸런스가 망가지는 것을 보면서 실망스러움을 느꼈습니다.
-                    이로 인해 게임 밸런스 기획자가 되면 이러한 문제를 해결할 수 있을지 고민하게 되었습니다.
-
+                    게임 밸런스가 망가지는 것을 보면서 마음이 아프기도하고, 화가 나기도 했습니다
+                    그러나 일반 유저로써는 할 수 있는 것은 없었습니다.
+                    그래서 고등학교 3학년 때, 게임 관련 직종에 대해 찾아보았습니다. 밸런스라는 부분이 개발보다는
+                    기획이랑 관련이 많이 있다는 사실을 확인하고, 기획자에 대해 찾아보았습니다.
+                    기획자 중에 밸런싱 기획자가 있다는 것을 알고 이때부터 게임 밸런스 기획자라는 직업에 관심을 가지게 되었습니다.
+                    <br>
                     저의 게임 기획자로의 꿈은 배틀그라운드라는 게임이 출시될 때부터 확고해졌습니다. FPS 게임은 다양한 총기들이 존재하고, 각각의 특징과 능력치가 게임의 재미를 결정하는 중요한
                     요소입니다. 만약 총기들의 특징이 없거나 유사하다면 게임은 재미가 없을 것입니다. 또한, 데미지 설정을 잘못하면 게임 내 밸런스가 깨져 플레이어들에게 불만이 생길 수 있습니다.
                     게임을 사랑하는 입장에서 이러한 문제들이 증가하면서 직접 밸런스를 조절하고 싶다는 생각이 들었습니다.
@@ -96,9 +100,19 @@
                     제가 자바프로그래밍2 과목에서 팀 프로젝트를 진행했습니다. 프로젝트는 라즈베리파이와 안드로이드를 활용하여 SmartFactory라는 주제로 공장 자동 관리 시스템을 개발했습니다.
                     팀원들과는 연락과 회의에서는 문제가 없었지만, 기술적인 어려움이 많았습니다. 안드로이드, 자바, 스프링, 라즈베리파이, 데이터베이스 등 다양한 기술을 사용해야 했기 때문입니다.
                     이에 따라 학교 수업 외에도 많은 시간을 투자하여 공부했습니다.
-                    프로젝트를 진행하면서 어려움을 겪었지만, 검색과 선배들에게 질문하는 등 다양한 방법을 통해 문제를 해결해 나갔습니다. 우리는 공장의 정보를 등록하면 어플리케이션에서 해당 정보를
-                    확인할 수 있는 실시간 정보 시스템을 개발했습니다. 결과적으로 우리 팀은 모두 성적을 잘 받았습니다. 그러나 성적보다는 팀원들과의 소통, 역량 강화 등 다양한 능력을 키웠고,
-                    저 개인적으로도 크게 성장했다고 느꼈습니다.
+                  
+                    <br>
+                    프로젝트를 진행하면서 어려움을 겪었지만, 검색과 선배들에게 질문하는 등 다양한 방법을 통해 문제를 해결해 나갔습니다. 
+                    이로 인해 공장의 정보를 등록하면 어플리케이션에서 해당 정보를 실시간으로 확인할 수 있는 시스템을 개발할 수 있었습니다. 
+                    결과적으로 저희 팀원들은 좋은 성적을 얻을 수 있었습니다. 이 프로젝트를 진행하면서 여러 가지를 느꼈습니다.
+                    <br>
+                    처음 느낀 것은 팀장의 역량이 중요하다는 것을 깨달았습니다. 팀장은 제가 생각하기에 팀원들 중에서 가장 역량이 뛰어나며 책임감이 있어서 가장 많은 개발을 담당했지만, 
+                    저희 팀원들에게 불만없이 협력했습니다. 이러한 점에서 많은 감명을 받았습니다.
+
+                    저는 모르는 부분이나 어렵다고 생각할 때는 선배님들에게 질문했습니다. 하지만 팀장을 보면서 배움에 있어서 나이는 의미가 없다는 것을 깨달았고, 
+                    조금 부끄러웠습니다. "내가 선배로서 더 도와줄 걸"이라는 생각을 하면서도 실천하지 않았습니다. 이러한 부분에서 저는 실망스러웠습니다.
+                    <br>
+                    결과는 중요하긴 하지만, 과정 역시 중요하다는 것을 깨달았습니다. 이 프로젝트 이후의 프로젝트에서는 적극적으로 참여하면서 변화하려고 노력하고 있습니다.
                 </div>
             </form>
 
